--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,7 +1,3 @@
 # Insert chapter 2 title here
+- Git, Rstudio, Rmarkdown, and interconnectivity between these.
 
-*Describe the work you have done this week and summarize your learning.*
-
-- Describe your work and results clearly. 
-- Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods
-- Assume the reader has no previous knowledge of your data or the more advanced methods you are using  
