--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,7 @@ output:
   html_document:
     theme: cosmo
     toc: true
+    toc_float: true
     toc_depth: 2
     fig_caption: true
     fig_width: 6
