--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -200,7 +200,7 @@ p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_
 p6
 ```
 
-Hard to make any conclusions, but general trend seems to be declining and slightly increasing at the end.
+Hard to make any conclusions, but general trend seems to be declining and slightly increasing at the end. This could indicate that we would need non-linear model to fit the data best, but let's first proceed with linear models.
 
 ### Regression
 
@@ -263,19 +263,19 @@ Adding interaction doesn't seem to be so important (p=0.07) but probably doesn't
 ### Plot fitted values from models
 ```{r}
 Fitted <- fitted(BPRS_ref2)
-BPRSL <- BPRSL %>% mutate(Fitted)
-p1 <- ggplot(BPRSL, aes(x = Week, y = bprs, group = interaction(subject, treatment)))
+BPRSL1 <- BPRSL %>% mutate(Fitted)
+p1 <- ggplot(BPRSL1, aes(x = Week, y = bprs, group = interaction(subject, treatment)))
 p2 <- p1 + geom_line() #+ geom_line(aes(linetype = Group))
-p3 <- p2 + scale_x_continuous(name = "Time (week)", breaks = seq(0, 60, 20))
+p3 <- p2 + scale_x_continuous(name = "Time (week)")
 p4 <- p3 + scale_y_continuous(name = "BPRS")
 p5 <- p4 + theme_bw() + theme(legend.position = "right") # "none" in the book
 p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
 p7 <- p6 + ggtitle("Observed")
 graph1 <- p7
 
-p1 <- ggplot(BPRSL, aes(x = Week, y = Fitted, group = interaction(subject, treatment)))
+p1 <- ggplot(BPRSL1, aes(x = Week, y = Fitted, group = interaction(subject, treatment)))
 p2 <- p1 + geom_line() #+ geom_line(aes(linetype = Group))
-p3 <- p2 + scale_x_continuous(name = "Time (week)", breaks = seq(0, 60, 20))
+p3 <- p2 + scale_x_continuous(name = "Time (week)")
 p4 <- p3 + scale_y_continuous(name = "BPRS")
 p5 <- p4 + theme_bw() + theme(legend.position = "right")
 p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
@@ -285,21 +285,22 @@ graph2 <- p7
 graph1; graph2
 ```
 
-Fitted values seem to estimate general declining linear trend for all individuals. However, as we noted in the earlier first plot, the relationship is probably actually non-linear, meaning it increases at the end. Thus, depending on application, we might want to include some second order polynomial term to account for this non-linearity:
+Fitted values seem to estimate general declining linear trend for all individuals. However, as we noted in the earlier first plot, the relationship is probably actually non-linear, as wee here that it increases at the end after first declining. Thus, depending on application, we might want to include second and third order polynomial term to account for this non-linearity:
 
 ```{r}
-BPRS_ref3 <- lmer(bprs ~ poly(Week,2) + treatment + (Week | subject), data = BPRSL, REML = FALSE)
+BPRS_ref3 <- lmer(bprs ~ poly(Week,3)*treatment + (Week | subject), data = BPRSL, REML = FALSE)
 summary(BPRS_ref3)
 anova(BPRS_ref2, BPRS_ref3)
 ```
 
-It seems to perform much better. Let' plot these fitted values with second order polynomial term:
+It seems to perform much better on paper. Let's also plot these fitted values with second and third order polynomial term:
+
 ```{r}
 Fitted <- fitted(BPRS_ref3)
 BPRSL2 <- BPRSL %>% mutate(Fitted)
 p1 <- ggplot(BPRSL2, aes(x = Week, y = bprs, group = interaction(subject, treatment)))
 p2 <- p1 + geom_line() #+ geom_line(aes(linetype = Group))
-p3 <- p2 + scale_x_continuous(name = "Time (week)", breaks = seq(0, 60, 20))
+p3 <- p2 + scale_x_continuous(name = "Time (week)")
 p4 <- p3 + scale_y_continuous(name = "BPRS")
 p5 <- p4 + theme_bw() + theme(legend.position = "right") # "none" in the book
 p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
@@ -308,7 +309,7 @@ graph1 <- p7
 
 p1 <- ggplot(BPRSL2, aes(x = Week, y = Fitted, group = interaction(subject, treatment)))
 p2 <- p1 + geom_line() #+ geom_line(aes(linetype = Group))
-p3 <- p2 + scale_x_continuous(name = "Time (week)", breaks = seq(0, 60, 20))
+p3 <- p2 + scale_x_continuous(name = "Time (week)")
 p4 <- p3 + scale_y_continuous(name = "BPRS")
 p5 <- p4 + theme_bw() + theme(legend.position = "right")
 p6 <- p5 + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
@@ -318,4 +319,4 @@ graph2 <- p7
 graph1; graph2
 ```
 
-=> Profit!
+=> Profit.
